k8s/data-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akasa-data-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: akasa-data-service
  template:
    metadata:
      labels:
        app: akasa-data-service
    spec:
      containers:
      - name: akasa-data-service
        image: akaregistry.azurecr.io/akasa-data-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
