k8s/ml-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akasa-ml-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: akasa-ml-service
  template:
    metadata:
      labels:
        app: akasa-ml-service
    spec:
      containers:
      - name: akasa-ml-service
        image: akaregistry.azurecr.io/akasa-ml-service:latest
        ports:
        - containerPort: 8000
