k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akasa-api-gateway
spec:
  type: ClusterIP
  selector:
    app: akasa-api-gateway
  ports:
  - port: 8000
    targetPort: 8000
