k8s/data-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akasa-data-service
spec:
  type: ClusterIP
  selector:
    app: akasa-data-service
  ports:
  - port: 8000
    targetPort: 8000
