k8s/ml-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akasa-ml-service
spec:
  type: ClusterIP
  selector:
    app: akasa-ml-service
  ports:
  - port: 8000
    targetPort: 8000
