k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akasa-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /ml
        pathType: Prefix
        backend:
          service:
            name: akasa-ml-service
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: akasa-api-gateway
            port:
              number: 8000
      - path: /data
        pathType: Prefix
        backend:
          service:
            name: akasa-data-service
            port:
              number: 8000
